# MdMemory

./: CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  RELEASE.md  design.md  example.py  pyproject.toml  release.sh  requirements.md  spec.md
.github/workflows/: python-publish.yml
example_knowledge_base/: .registry.json  index.md
example_knowledge_base/general_knowledge/: demo_topic.md  python_classes.md  python_functions.md
src/mdmemory/: __init__.py  adk.py  core.py  mcp.py  models.py  registry.py  utils.py
tests/: __init__.py  test_adk.py  test_mdmemory.py
